force-app/main/default/objects/Interest_Amount_Line_Item__c/Interest_Amount_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Interest Amount Line Item</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interest Amount Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Amount Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>