force-app/main/default/objects/Interest_Amount_Line_Item__c/fields/Interest_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Date__c</fullName>
    <label>Interest End Date</label>
    <type>Date</type>
</CustomField>