force-app/main/default/objects/Interest_Amount_Line_Item__c/fields/Interest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Start_Date__c</fullName>
    <label>Interest Start Date</label>
    <type>Date</type>
</CustomField>