force-app/main/default/objects/Interest_Amount_Line_Item__c/fields/Manual_Interest__c.field-meta.xml
<CustomField>
    <fullName>Manual_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Interest</label>
    <type>Checkbox</type>
</CustomField>