force-app/main/default/objects/Interest_Amount_Line_Item__c/fields/Payment_schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_schedule__c</fullName>
    <label>Payment schedule</label>
    <referenceTo>Payment_schedule__c</referenceTo>
    <relationshipLabel>Interest Amount Line Items</relationshipLabel>
    <relationshipName>Interest_Amount_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>